--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
         "tailwindcss": "^3.2.1",
         "vite": "^6.2.4",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@heroicons/vue": "^2.2.0",
+        "chart.js": "^4.5.0",
+        "chartjs-plugin-datalabels": "^2.2.0",
+        "vue-chartjs": "^5.3.2"
     }
 }
